[tool.poetry]
name = "deurbel"
version = "0.1.0"
description = ""
authors = ["bob <bob.verschoor@alliander.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
paho-mqtt = "^2.1.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^75.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deurbel = "src.deurbel:main"
