[tool.poetry]
name = "deurbel"
version = "0.1.0"
description = ""
authors = ["bob <bob.verschoor@alliander.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
paho-mqtt = "^2.1.0"
pytest = "^9.0.2"
gpiozero = "^2.0.1"

[tool.poetry.group.dev.dependencies]
setuptools = "^81.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deurbel = "src.deurbel:main"

[tool.pytest.ini_options]
pythonpath = "src"